--- a/.env.local
+++ b/.env.local
@@ -3,3 +3,5 @@ COOKIE_SECRET=something
 
 DATABASE_TYPE="postgres"
 REDIS_URL=redis://localhost:6379
+STORE_CORS=http://localhost:3000,http://localhost:7001
+ADMIN_CORS=http://localhost:7001
