chore: Update @medusajs/medusa dependency to version ^1.20.6 and extend user default selects

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
 		"@medusajs/event-bus-local": "latest",
 		"@medusajs/event-bus-redis": "latest",
 		"@medusajs/file-local": "latest",
-		"@medusajs/medusa": "latest",
+		"@medusajs/medusa": "^1.20.6",
 		"@tanstack/react-query": "4.22.0",
 		"body-parser": "^1.19.0",
 		"class-validator": "^0.14.1",
