--- a/.env.local
+++ b/.env.local
@@ -4,4 +4,5 @@ COOKIE_SECRET=something
 DATABASE_TYPE="postgres"
 REDIS_URL=redis://localhost:6379
 STORE_CORS=http://localhost:3000,http://localhost:7001
-ADMIN_CORS=http://localhost:7001
+ADMIN_CORS=http://localhost:7001,http://localhost:7002
+MEDUSA_FF_SALES_CHANNELS=false
